Modification des collapses + changement des icones fontawesome en image via la maquette + correction d'une erreur de clé sur les pages de logement avec une seul photo sur le carrousel

--- a/src/assets/styles/_settings.scss
+++ b/src/assets/styles/_settings.scss
@@ -65,7 +65,6 @@ $margin-tablette: 0 30px;
 
 @mixin collapseClose {
     width: 100%;
-    margin-bottom: 30px;
     overflow: hidden;
     transition: all 0.4s linear;
 }
@@ -74,7 +73,6 @@ $margin-tablette: 0 30px;
     background-color: #F6F6F6;
     height: auto;
     width: 100%;
-    margin-bottom: 30px;
     transition: all 0.4s linear;
 }
 
